cicd/k8s/configs/ingress-controller/test-ingress-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: country
    servicePort: 9090
